# workspace_jornada_dados

./: README.md  pyproject.toml
backend/: start.py
backend/arq_parquet_api/: compras_api_20251214_081950.parquet  compras_api_20251214_082857.parquet  compras_api_20251214_084816.parquet  compras_api_20251214_084826.parquet
backend/contrats/: __init__.py  schema.py
backend/datasource/: __init__.py  api.py
backend/fakeapi/: main.py  produtos.csv
backend/fakeapi/api/: routes.py
backend/fakeapi/services/: fake_service.py
frontend/: main.py
frontend/contracts/: catalogo.py
frontend/datasource/: csv.py
