[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Fake Purchase API"
authors = ["Diego"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
faker = "^25.0.0"
pandas = "^2.3.3"
requests = "^2.32.5"
pyarrow = "^22.0.0"
schedules = "^1.3"
schedule = "^1.2.2"
streamlit = "^1.52.1"
openpyxl = "^3.1.5"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
